--- a/admin-panel/templates/ecom/admin_add_invoices.html
+++ b/admin-panel/templates/ecom/admin_add_invoices.html
@@ -14,7 +14,6 @@
       background: #0F2027;  
       background: -webkit-linear-gradient(to left, #2C5364, #203A43, #0F2027);  
       background: linear-gradient(to left, #2C5364, #203A43, #0F2027); 
-
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -36,10 +35,9 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background:#009414;
+      background: #009414;
       color: #fff;
     }
-
 
     .menu {
       top: 50px;
@@ -51,48 +49,47 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <br><br><br><br><br><br>
-
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>Update Customer Details</p>
+        <p>ADD INVOICE</p>
       </div>
       <div class="form-content">
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              {% render_field userForm.first_name class="form-control" placeholder="First Name" %}
+              <label for="">Invoice Name</label>
+              {% render_field invoiceForm.name class="form-control" placeholder="Invoice Name" %}
             </div>
             <div class="form-group">
-              {% render_field userForm.username class="form-control" placeholder="Username" %}
-            </div>
-            <div class="form-group">
-              {% render_field customerForm.mobile class="form-control" placeholder="Contact" %}
-            </div>
-            <div class="form-group">
-              {% render_field customerForm.profile_pic class="form-control" placeholder="Profile Picture" %}
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              {% render_field userForm.last_name class="form-control" placeholder="Last Name" %}
-            </div>
-            <div class="form-group">
-              {% render_field userForm.password class="form-control" placeholder="Password" %}
-            </div>
-            <div class="form-group">
-              {% render_field customerForm.address class="form-control" placeholder="Address" %}
+              <label for="">Address</label>
+              {% render_field invoiceForm.address class="form-control" placeholder="Address" %}
             </div>
 
           </div>
+
+
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="">Tax Code</label>
+              {% render_field invoiceForm.tax_code class="form-control" placeholder="9965" %}
+            </div>
+
+
+            <div class="form-group">
+              <label for="">Phone</label>
+              {% render_field invoiceForm.phone class="form-control" placeholder="Phone Number" %}
+            </div>
+
+
+          </div>
         </div>
-        <button type="submit" class="btnSubmit">Update</button>
+        <button type="submit" class="btnSubmit">ADD</button>
       </div>
     </div>
   </div>
 </form>
-
 
 {% endblock content %}
