--- a/admin-panel/templates/ecom/admin_base.html
+++ b/admin-panel/templates/ecom/admin_base.html
@@ -20,9 +20,7 @@
 
     }
 
-        /*---------------------------------------
-           Social section
-        -----------------------------------------*/
+
         footer {
           padding: 0px 0px 0px 0px;
           background-color: black;
@@ -94,8 +92,8 @@
           <a href="/view-customer" class="nav-item nav-link">Customer</a>
           <a href="/admin-view-booking" class="nav-item nav-link">View Orders</a>
           <a href="/admin-products" class="nav-item nav-link">Manage Products</a>
-          <a href="/admin-products" class="nav-item nav-link">Scan Invoice</a>
-          <!-- <a href="/view-feedback" class="nav-item nav-link">Feedback</a> -->
+          <a href="/admin-invoices" class="nav-item nav-link">Scan Invoice</a>
+
         </div>
 
         <div class="navbar-nav navbar-right">
@@ -106,7 +104,7 @@
     </nav>
   </div>
 
-  <!-- content start-->
+
   {% block content %}
 
   {% endblock content %}
