--- a/admin-panel/templates/ecom/admin_dashboard_cards.html
+++ b/admin-panel/templates/ecom/admin_dashboard_cards.html
@@ -18,7 +18,7 @@
     }
 
     .market-update-block h4 {
-      font-size: 1.2em;
+      font-size: 0.96em;
       color: #fff;
       margin: 0.3em 0em;
       font-family: 'Carrois Gothic', sans-serif;
@@ -58,7 +58,14 @@
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
     }
-
+    .market-update-block.clr-block-4 {
+      background: #FF7F50;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      transition: 0.5s all;
+      -webkit-transition: 0.5s all;
+      -moz-transition: 0.5s all;
+      -o-transition: 0.5s all;
+    }
     .market-update-block.clr-block-1:hover {
       background: #3C3C3C;
       transition: 0.5s all;
@@ -82,6 +89,13 @@
       -moz-transition: 0.5s all;
       -o-transition: 0.5s all;
     }
+    .market-update-block.clr-block-4:hover {
+      background: #3C3C3C;
+      transition: 0.5s all;
+      -webkit-transition: 0.5s all;
+      -moz-transition: 0.5s all;
+      -o-transition: 0.5s all;
+    }    
 
     .market-update-right i.fa.fa-users {
       font-size: 3em;
@@ -124,6 +138,19 @@
       -o-border-radius: 49px;
       line-height: 1.7em;
     }
+    .market-update-right i.fa.fa-file-text-o {
+      font-size: 3em;
+      color: #343A40;
+      width: 80px;
+      height: 80px;
+      background: #fff;
+      text-align: center;
+      border-radius: 49px;
+      -webkit-border-radius: 49px;
+      -moz-border-radius: 49px;
+      -o-border-radius: 49px;
+      line-height: 1.7em;
+    }    
 
     .market-update-left {
       padding: 0px;
@@ -137,45 +164,59 @@
 
 <body>
   <div class="market-updates">
-    <div class="col-md-4 market-update-gd">
+    <div class="col-md-3 market-update-gd">
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
           <h3>{{customercount}}</h3>
           <h4>Registered Customer</h4>
 
         </div>
-        <div class="col-md-4 market-update-right">
+        <div class="col-md-3 market-update-right">
           <i class="fa fa-users"></i>
         </div>
         <div class="clearfix"> </div>
       </div>
     </div>
-    <div class="col-md-4 market-update-gd">
+    <div class="col-md-3 market-update-gd">
       <div class="market-update-block clr-block-2">
         <div class="col-md-8 market-update-left">
           <h3>{{productcount}}</h3>
           <h4>Total Product</h4>
 
         </div>
-        <div class="col-md-4 market-update-right">
+        <div class="col-md-3 market-update-right">
           <i class="fa fa-shopping-cart"></i>
         </div>
         <div class="clearfix"> </div>
       </div>
     </div>
-    <div class="col-md-4 market-update-gd">
+    <div class="col-md-3 market-update-gd">
       <div class="market-update-block clr-block-3">
         <div class="col-md-8 market-update-left">
           <h3>{{ordercount}}</h3>
           <h4>Total Orders</h4>
 
         </div>
-        <div class="col-md-4 market-update-right">
+        <div class="col-md-3 market-update-right">
           <i class="fa fa-bar-chart"> </i>
         </div>
         <div class="clearfix"> </div>
       </div>
     </div>
+
+    <div class="col-md-3 market-update-gd">
+      <div class="market-update-block clr-block-4">
+        <div class="col-md-8 market-update-left">
+          <h3>{{ordercount}}</h3>
+          <h4>Total Invoices</h4>
+
+        </div>
+        <div class="col-md-3 market-update-right">
+          <i class="fa fa-file-text-o"> </i>
+        </div>
+        <div class="clearfix"> </div>
+      </div>
+    </div>    
 
   </div>
   <br><br>
