--- a/admin-panel/templates/ecom/adminlogin.html
+++ b/admin-panel/templates/ecom/adminlogin.html
@@ -9,9 +9,9 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: #bdc3c7;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #bdc3c7;  
+background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  
+background: linear-gradient(to bottom, #2c3e50, #bdc3c7); 
 
 }
 
@@ -46,7 +46,7 @@ background: linear-gradient(to bottom, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, 
 
 .box h1 {
     color: white;
-    /* text-transform: uppercase; */
+
     font-weight: 500
 }
 
@@ -101,6 +101,5 @@ background: linear-gradient(to bottom, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, 
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br>
-{% include "ecom/footer.html" %}
   </body>
 </html>
