--- a/admin-panel/templates/ecom/index.html
+++ b/admin-panel/templates/ecom/index.html
@@ -124,12 +124,12 @@ body {
   -moz-transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
 }
 
 .h-bg {
@@ -137,12 +137,12 @@ body {
   -moz-transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 800ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   width: 660px;
   height: 100%;
   background-color: #3fcd7f;
@@ -161,12 +161,12 @@ body {
   -moz-transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   position: absolute;
   width: 100%;
   bottom: 10px;
@@ -195,12 +195,12 @@ body {
   -moz-transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   position: absolute;
   width: 100%;
   bottom: -20px;
@@ -230,12 +230,12 @@ body {
   -moz-transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   -webkit-transition-delay: 100ms;
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
@@ -256,12 +256,12 @@ body {
   -moz-transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  /* ease-out */
+  
   -webkit-transition-delay: 100ms;
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
@@ -286,22 +286,22 @@ body {
   box-sizing: border-box;
 }
 
-/* Create three equal columns that floats next to each other */
+
 .column {
   float: left;
   width: 33.33%;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+  height: 300px; 
 }
 
-/* Clear floats after the columns */
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
@@ -321,7 +321,7 @@ img {
 }
 
 .slider-container{
-  height: 35%;
+  height: 50%;
   width: 100%;
   position: relative;
   overflow: hidden; 
@@ -410,11 +410,9 @@ img {
 <h3 style="text-align:center; color:#3E454C;">{{word}}</h3>
 <br>
 
-<!-- products data starttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt -->
   <div class="row">
 
       {% for p in products %}
-      <!-- card1 -->
       <div class="column">
       <div class="container page-wrapper" style="width: 450px;">
         <div class="page-inner">
@@ -448,7 +446,6 @@ img {
         </div>
       </div>
       </div>
-<!-- card1 end -->
 {% if forloop.counter|divisibleby:"3" %}
     </div>
 
@@ -458,7 +455,6 @@ img {
 {% endif %}
   {% endfor %}
 </div>
-<!-- products data enddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd -->
 {%else%}
 <h3 style="text-align:center; color:#3E454C;">No Search Found</h3>
 {%endif%}
