--- a/ecom/templates/ecom/admin_base.html
+++ b/ecom/templates/ecom/admin_base.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="en">
 <head>
-  <title>Admin Panel - Ecommerce</title>
+  <title>Admin Panel - Medicine</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -82,7 +82,7 @@
 
   <div class="bs-example">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background:#343A40;">
-      <a href="/ecom/static" class="navbar-brand">Admin Panel</a>
+      <a href="/" class="navbar-brand">Admin Panel</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
