--- a/ecom/templates/ecom/download_invoice.html
+++ b/ecom/templates/ecom/download_invoice.html
@@ -122,7 +122,7 @@
           <table class="table table-bordered table-striped">
             <tr>
               <td class="title">
-                <h5>Ecommerce Site - Django</h5>
+                <h5>Medicine Company</h5>
               </td>
 
               <td>
@@ -166,7 +166,7 @@
                 Product Image :<br>
                  <img src="{% static product_image.url %}" alt="Profile Pic" height="40px" width="40px" /><br><br>
                 Product Price : <br>
-                ${{productPrice}}
+                {{productPrice}}.000 VND
               </td>
               <td>
                 Product: <br> {{productName}}<br><br>
@@ -194,7 +194,7 @@
       </tr>
 
 
-      
+
 
 
     </table>
