--- a/ecom/templates/ecom/customer_base.html
+++ b/ecom/templates/ecom/customer_base.html
@@ -259,7 +259,7 @@ body {
         </div>
         <div class="row row2">
             <div class="col-sm-3">
-                <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/ecom/static"><span class="largenav">Ecommerce </span></a></h2>
+                <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/"><span class="largenav">Medicine </span></a></h2>
             </div>
 
             <div class="navbar-search smallsearch col-sm-7 col-xs-11">
