--- a/ecom/templates/ecom/customer_home.html
+++ b/ecom/templates/ecom/customer_home.html
@@ -81,7 +81,7 @@ body {
 }
 
 .el-wrapper:hover .add-to-cart {
-  left: 50%;
+  left: 60%;
 }
 
 .el-wrapper:hover .img {
@@ -163,12 +163,12 @@ body {
   -moz-transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 400ms cubic-bezier(0, 0, 0.18, 1);
-  
+
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  
+
   position: absolute;
   width: 100%;
   bottom: 10px;
@@ -197,12 +197,12 @@ body {
   -moz-transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 300ms cubic-bezier(0, 0, 0.18, 1);
-  
+
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  
+
   position: absolute;
   width: 100%;
   bottom: -20px;
@@ -232,12 +232,12 @@ body {
   -moz-transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
-  
+
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  
+
   -webkit-transition-delay: 100ms;
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
@@ -258,12 +258,12 @@ body {
   -moz-transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
   -o-transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
   transition: all 600ms cubic-bezier(0, 0, 0.18, 1);
-  
+
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -moz-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   -o-transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
   transition-timing-function: cubic-bezier(0, 0, 0.18, 1);
-  
+
   -webkit-transition-delay: 100ms;
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
@@ -325,7 +325,7 @@ img {
   height: 50%;
   width: 100%;
   position: relative;
-  overflow: hidden; 
+  overflow: hidden;
   text-align: center;
 }
 
@@ -392,13 +392,13 @@ img {
         <label for="slide-dot-3"></label>
         <label for="slide-dot-4"></label>
       </div>
-      
+
       <input id="slide-dot-1" type="radio" name="slides" checked>
         <div class="slide slide-1"></div>
-      
+
       <input id="slide-dot-2" type="radio" name="slides">
         <div class="slide slide-2"></div>
-      
+
       <input id="slide-dot-3" type="radio" name="slides">
         <div class="slide slide-3"></div>
       <input id="slide-dot-4" type="radio" name="slides">
@@ -411,7 +411,7 @@ img {
   {%if products%}
   <h3 style="text-align:center; color:#3E454C;">{{word}}</h3>
   <br>
-  
+
   <!-- products data start -->
   <div class="row">
 
@@ -439,7 +439,7 @@ img {
                 </div>
 
                 <a class="cart" href="{% url 'add-to-cart' p.id  %}">
-                  <span class="price">${{p.price}}</span>
+                  <span class="price">{{p.price}}.000 VND</span>
                   <span class="add-to-cart">
                     <span class="txt"><i class="fa fa-shopping-cart"></i> Add To Cart</span>
                   </span>
