--- a/ecom/templates/ecom/customer_navbar.html
+++ b/ecom/templates/ecom/customer_navbar.html
@@ -210,7 +210,7 @@
             </div>
             <div class="row row2">
                 <div class="col-sm-3">
-                    <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/ecom/static"><span class="largenav">Ecommerce </span></a></h2>
+                    <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/"><span class="largenav">Medicine </span></a></h2>
                 </div>
 
 
