translate and fix bug

--- a/ecom/templates/ecom/admin_add_invoices.html
+++ b/ecom/templates/ecom/admin_add_invoices.html
@@ -54,18 +54,18 @@
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>ADD INVOICE</p>
+        <p>Thêm hóa đơn</p>
       </div>
       <div class="form-content">
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <label for="">Invoice Name</label>
-              {% render_field invoiceForm.name class="form-control" placeholder="Invoice Name" %}
+              <label for="">Tên hóa đơn</label>
+              {% render_field invoiceForm.name class="form-control" placeholder="Tên hóa đơn" %}
             </div>
             <div class="form-group">
-              <label for="">Address</label>
-              {% render_field invoiceForm.address class="form-control" placeholder="Address" %}
+              <label for="">Địa chỉ</label>
+              {% render_field invoiceForm.address class="form-control" placeholder="Địa chỉ" %}
             </div>
 
           </div>
@@ -79,14 +79,14 @@
 
 
             <div class="form-group">
-              <label for="">Phone</label>
-              {% render_field invoiceForm.phone class="form-control" placeholder="Phone Number" %}
+              <label for="">Số điện thoại</label>
+              {% render_field invoiceForm.phone class="form-control" placeholder="Số điện thoại" %}
             </div>
 
 
           </div>
         </div>
-        <button type="submit" class="btnSubmit">ADD</button>
+        <button type="submit" class="btnSubmit">Thêm</button>
       </div>
     </div>
   </div>
