--- a/ecom/templates/ecom/admin_dashboard_cards.html
+++ b/ecom/templates/ecom/admin_dashboard_cards.html
@@ -168,7 +168,7 @@
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
           <h3>{{customercount}}</h3>
-          <h4>Registered Customer</h4>
+          <h4>Khách hàng</h4>
 
         </div>
         <div class="col-md-3 market-update-right">
@@ -181,7 +181,7 @@
       <div class="market-update-block clr-block-2">
         <div class="col-md-8 market-update-left">
           <h3>{{productcount}}</h3>
-          <h4>Total Product</h4>
+          <h4>Tổng sản phẩm</h4>
 
         </div>
         <div class="col-md-3 market-update-right">
@@ -194,7 +194,7 @@
       <div class="market-update-block clr-block-3">
         <div class="col-md-8 market-update-left">
           <h3>{{ordercount}}</h3>
-          <h4>Total Orders</h4>
+          <h4>Tổng đơn hàng</h4>
 
         </div>
         <div class="col-md-3 market-update-right">
@@ -208,7 +208,7 @@
       <div class="market-update-block clr-block-4">
         <div class="col-md-8 market-update-left">
           <h3>{{ordercount}}</h3>
-          <h4>Total Invoices</h4>
+          <h4>Tổng hóa đơn</h4>
 
         </div>
         <div class="col-md-3 market-update-right">
