--- a/ecom/templates/ecom/admin_invoices.html
+++ b/ecom/templates/ecom/admin_invoices.html
@@ -43,16 +43,16 @@
 <div class="container">
   <div class="panel panel-danger">
     <div class="panel-heading">
-      <h6 class="panel-title">Total Invoices</h6>
+      <h6 class="panel-title">Danh sách hóa đơn</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
         <tr>
           <th>ID</th>
-          <th>Name</th>
-          <th>Address</th>
-          <th>Tax_Code</th>
-          <th>Phone</th>
+          <th>Tên hóa đơn</th>
+          <th>Địa chỉ</th>
+          <th>Mã số thuế</th>
+          <th>Số điện thoại</th>
         </tr>
       </thead>
 
