--- a/ecom/templates/ecom/admin_view_booking.html
+++ b/ecom/templates/ecom/admin_view_booking.html
@@ -25,18 +25,18 @@
 <div class="container">
   <div class="panel panel-danger">
     <div class="panel-heading">
-      <h6 class="panel-title">Total Orders</h6>
+      <h6 class="panel-title">Danh sách đơn hàng</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
         <tr>
-          <th>Customer</th>
-          <th>Contact</th>
-          <th>Shipping Address</th>
-          <th>Product</th>
-          <th>Image</th>
-          <th>Status</th>
-          <th>Actions</th>
+          <th>Khách hàng</th>
+          <th>Số điện thoại</th>
+          <th>Nơi giao</th>
+          <th>Sản phẩm</th>
+          <th>Hình ảnh</th>
+          <th>Trạng thái</th>
+          <th>Họat động</th>
         </tr>
       </thead>
 
