--- a/ecom/templates/ecom/my_profile.html
+++ b/ecom/templates/ecom/my_profile.html
@@ -57,7 +57,7 @@
         </div>
         <div class="col-sm-4 col-md-4">
             <blockquote>
-                <p>Username: {{request.user}}</p> <small><cite title="Source Title">Address: {{customer.address}}  <i class="glyphicon glyphicon-map-marker"></i></cite></small>
+                <p>Tên đăng nhập: {{request.user}}</p> <small><cite title="Source Title">Địa chỉ: {{customer.address}}  <i class="glyphicon glyphicon-map-marker"></i></cite></small>
             </blockquote>
             <p><i class="glyphicon glyphicon-phone"></i>Contact: {{customer.mobile}}
             </p>
