--- a/ecom/templates/ecom/update_order.html
+++ b/ecom/templates/ecom/update_order.html
@@ -61,14 +61,14 @@
       </div>
       <div class="form-content">
 
-            <label for="">Select Any:</label>
+            <label for="">Chọn:</label>
 
-              {% render_field orderForm.status class="form-control" placeholder="Address" %}
+              {% render_field orderForm.status class="form-control" placeholder="Địa chỉ" %}
             </div>
 
           </div>
         </div>
-        <button type="submit" class="btnSubmit">Update Order Status</button>
+        <button type="submit" class="btnSubmit">Cập nhật</button>
 
 </form>
 
