--- a/qlhd/templates/home/notification.html
+++ b/qlhd/templates/home/notification.html
@@ -4,7 +4,7 @@
 
         Để tiếp tục, đăng nhập tài khoản có quyền
         <a href="/admin">
-            Login
+            Đăng nhập
         </a>
     </p>
     <br>
