--- a/ecom/templates/ecom/admin_add_products.html
+++ b/ecom/templates/ecom/admin_add_products.html
@@ -55,35 +55,44 @@
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>ADD PRODUCTS</p>
+        <p>Thêm sản phẩm</p>
       </div>
       <div class="form-content">
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <label for="">Product Name</label>
-              {% render_field productForm.name class="form-control" placeholder="Product Name" %}
+              <label for="">Tên sản phẩm</label>
+              {% render_field productForm.name class="form-control" placeholder="Tên sản phẩm" %}
             </div>
             <div class="form-group">
-              <label for="">Short Description</label>
-              {% render_field productForm.description class="form-control" placeholder="Description" %}
+              <label for="">Số lượng</label>
+              {% render_field productForm.unit class="form-control" placeholder="Số lượng sản phẩm" %}
             </div>
+            <div class="form-group">
+              <label for="">Mô tả</label>
+              {% render_field productForm.description class="form-control" placeholder="Mô tả ngắn" %}
+            </div>
+
 
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label for="">Product Price (VND)</label>
-              {% render_field productForm.price class="form-control" placeholder="52" %}
+              <label for="">Giá sản phẩm (VND)</label>
+              {% render_field productForm.price class="form-control" placeholder="520" %}
             </div>
             <div class="form-group">
-              <label for="">Product Image</label>
-              {% render_field productForm.product_image class="form-control" placeholder="product_image" %}
+              <label for="">Loại sản phẩm</label>
+              {% render_field productForm.type class="form-control" placeholder="Loại sản phẩm" %}
+            </div>            
+            <div class="form-group">
+              <label for="">Ảnh đại diện</label>
+              {% render_field productForm.product_image class="form-control" placeholder="Ảnh đại diện" %}
             </div>
 
 
           </div>
         </div>
-        <button type="submit" class="btnSubmit">ADD</button>
+        <button type="submit" class="btnSubmit">Thêm</button>
       </div>
     </div>
   </div>
