--- a/ecom/templates/ecom/admin_base.html
+++ b/ecom/templates/ecom/admin_base.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="en">
 <head>
-  <title>Admin Panel - Medicine</title>
+  <title>Hệ thống quản trị - Cửa hàng thuốc</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -82,22 +82,22 @@
 
   <div class="bs-example">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background:#343A40;">
-      <a href="/" class="navbar-brand">Admin Panel</a>
+      <a href="/" class="navbar-brand">Quản trị viên</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         <div class="navbar-nav">
-          <a href="/view-customer" class="nav-item nav-link">Customer</a>
-          <a href="/admin-view-booking" class="nav-item nav-link">View Orders</a>
-          <a href="/admin-products" class="nav-item nav-link">Manage Products</a>
-          <a href="/admin-invoices" class="nav-item nav-link">Scan Invoice</a>
+          <a href="/view-customer" class="nav-item nav-link">Khách hàng</a>
+          <a href="/admin-view-booking" class="nav-item nav-link">Đơn hàng</a>
+          <a href="/admin-products" class="nav-item nav-link">Sản phẩm</a>
+          <a href="/admin-invoices" class="nav-item nav-link">Hóa đơn</a>
 
         </div>
 
         <div class="navbar-nav navbar-right">
-          <a href="/logout" class="nav-item nav-link"> Logout</a>
+          <a href="/logout" class="nav-item nav-link"> Đăng xuất</a>
         </div>
 
       </div>
