--- a/ecom/templates/ecom/admin_dashboard.html
+++ b/ecom/templates/ecom/admin_dashboard.html
@@ -10,17 +10,17 @@
 
     <div class="panel panel-danger" >
       <div class="panel-heading" style="text-align:center;">
-        <h6 class="panel-title">Recent Booking</h6>
+        <h6 class="panel-title">Đơn hàng hiện tại</h6>
       </div>
       <table class="table table-hover table-bordered" id="dev-table">
         <thead>
           <tr>
-            <th>Customer</th>
-            <th>Contact</th>
-            <th>Shipment Address</th>
-            <th>Product</th>
-            <th>Image</th>
-            <th>Status</th>
+            <th>Khách hàng</th>
+            <th>Số điện thoại</th>
+            <th>Nơi giao hàng</th>
+            <th>Sản phẩm</th>
+            <th>Hình ảnh</th>
+            <th>Trạng thái</th>
 
           </tr>
         </thead>
