--- a/ecom/templates/ecom/admin_products.html
+++ b/ecom/templates/ecom/admin_products.html
@@ -43,16 +43,17 @@
 <div class="container">
   <div class="panel panel-danger">
     <div class="panel-heading">
-      <h6 class="panel-title">Total Products</h6>
+      <h6 class="panel-title">Danh sách sản phẩm</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Image</th>
-          <th>Price</th>
-          <th>Description</th>
-          <th>Actions</th>
+          <th>Tên sản phẩm</th>
+          <th>Hình ảnh</th>
+          <th>Giá</th>
+          <th>Tồn kho</th>
+          <th>Mô tả</th>
+          <th>Hoạt động</th>
         </tr>
       </thead>
       {% for p in products %}
@@ -62,6 +63,7 @@
         <td> {{p.name}}</td>
         <td> <img src="{% static p.product_image.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
         <td>{{p.price}}</td>
+        <td>{{p.unit}}</td>
         <td>{{p.description}}</td>
         <td><a class="btn btn-primary btn-xs" href="{% url 'update-product' p.id  %}"><span class="glyphicon glyphicon-edit"></span></a>
           <a class="btn btn-danger btn-xs" href="{% url 'delete-product' p.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
