--- a/ecom/templates/ecom/admin_update_customer.html
+++ b/ecom/templates/ecom/admin_update_customer.html
@@ -57,33 +57,33 @@
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>Update Customer Details</p>
+        <p>Cập nhật thông tin khách hàng</p>
       </div>
       <div class="form-content">
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              {% render_field userForm.first_name class="form-control" placeholder="First Name" %}
+              {% render_field userForm.first_name class="form-control" placeholder="Tên" %}
             </div>
             <div class="form-group">
-              {% render_field userForm.username class="form-control" placeholder="Username" %}
+              {% render_field userForm.username class="form-control" placeholder="Tên đăng nhập" %}
             </div>
             <div class="form-group">
-              {% render_field customerForm.mobile class="form-control" placeholder="Contact" %}
+              {% render_field customerForm.mobile class="form-control" placeholder="Số điện thoại" %}
             </div>
             <div class="form-group">
-              {% render_field customerForm.profile_pic class="form-control" placeholder="Profile Picture" %}
+              {% render_field customerForm.profile_pic class="form-control" placeholder="Ảnh đại diện" %}
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              {% render_field userForm.last_name class="form-control" placeholder="Last Name" %}
+              {% render_field userForm.last_name class="form-control" placeholder="Họ" %}
             </div>
             <div class="form-group">
-              {% render_field userForm.password class="form-control" placeholder="Password" %}
+              {% render_field userForm.password class="form-control" placeholder="Mật khẩu" %}
             </div>
             <div class="form-group">
-              {% render_field customerForm.address class="form-control" placeholder="Address" %}
+              {% render_field customerForm.address class="form-control" placeholder="Địa chỉ" %}
             </div>
 
           </div>
