--- a/ecom/templates/ecom/admin_update_product copy.html
+++ b/ecom/templates/ecom/admin_update_product copy.html
@@ -58,33 +58,33 @@
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>Update Product Details</p>
+        <p>Cập nhật sản phẩm</p>
       </div>
       <div class="form-content">
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <label for="">Product Name</label>
-              {% render_field productForm.name class="form-control" placeholder="Product Name" %}
+              <label for="">Tên sản phẩm</label>
+              {% render_field productForm.name class="form-control" placeholder="Tên sản phẩm" %}
             </div>
             <div class="form-group">
-              <label for="">Product Description</label>
-              {% render_field productForm.description class="form-control" placeholder="Description" %}
+              <label for="">Mô tả</label>
+              {% render_field productForm.description class="form-control" placeholder="Mô tả ngắn" %}
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label for="">Product Price</label>
-              {% render_field productForm.price class="form-control" placeholder="Price" %}
+              <label for="">Giá sản phẩm</label>
+              {% render_field productForm.price class="form-control" placeholder="Giá" %}
             </div>
             <div class="form-group">
-              {% render_field productForm.product_image class="form-control" placeholder="product_image" %}
+              {% render_field productForm.product_image class="form-control" placeholder="Ảnh" %}
             </div>
 
 
           </div>
         </div>
-        <button type="submit" class="btnSubmit">Update Product Details</button>
+        <button type="submit" class="btnSubmit">Cập nhật</button>
       </div>
     </div>
   </div>
