--- a/ecom/templates/ecom/cart.html
+++ b/ecom/templates/ecom/cart.html
@@ -67,16 +67,16 @@
 <div class="container">
   <div class="panel panel-success">
     <div class="panel-heading">
-      <h6 style="text-align:center;" class="panel-title">My Cart</h6>
+      <h6 style="text-align:center;" class="panel-title">Giỏ</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Image</th>
-          <th>Price</th>
-          <th>Description</th>
-          <th>Action</th>
+          <th>Tên sản phẩm</th>
+          <th>Hình ảnh</th>
+          <th>Giá</th>
+          <th>Mô tả</th>
+          <th>Hành động</th>
 
         </tr>
       </thead>
@@ -102,8 +102,8 @@
 </div>
 <br><br><br>
 <div style="text-align: center;">
-  <button class="btn btn-danger btn-lg">Total {{total}}.000 VND</button>
-  <a href="/customer-address"><button class="btn btn-success btn-lg" ><span>Purchase </span></button></a>
+  <button class="btn btn-danger btn-lg">Tổng {{total}}.000 VND</button>
+  <a href="/customer-address"><button class="btn btn-success btn-lg" ><span>Đặt hàng </span></button></a>
 </div>
 
 
