--- a/ecom/templates/ecom/customer_address.html
+++ b/ecom/templates/ecom/customer_address.html
@@ -98,23 +98,23 @@ select{
 
     </li>
     <li>
-        <label>Mobile <span class="required">*</span></label>
-        {% render_field addressForm.Mobile class="field-long" placeholder="Mobile" %}
+        <label>Số điện thoại <span class="required">*</span></label>
+        {% render_field addressForm.Mobile class="field-long" placeholder="Số điện thoại" %}
     </li>
 
     <li>
-        <label>Shipment Address <span class="required">*</span></label>
-        {% render_field addressForm.Address id="field5" class="field-long field-textarea" placeholder="Building Number,city, pin" %}
+        <label>Địa chỉ giao hàng <span class="required">*</span></label>
+        {% render_field addressForm.Address id="field5" class="field-long field-textarea" placeholder="Tòa nhà, tầng,..." %}
 
     </li>
     <li>
-        <input type="submit" value="Proceed To Pay" />
+        <input type="submit" value="Thanh toán" />
     </li>
 </ul>
 </form>
 {%else%}
 <br><br>
-<h1 style="text-align:center; color:red;"> First Add Product In Cart </h1>
+<h1 style="text-align:center; color:red;"> Thêm sản phẩm vào giỏ hàng</h1>
 <br><br><br><br><br><br><br><br><br><br>
 {%endif%}
 
