--- a/ecom/templates/ecom/customerlogin.html
+++ b/ecom/templates/ecom/customerlogin.html
@@ -149,11 +149,11 @@ a.socialIcon:hover,
             <div class="card">
                 <form class="box" method="post">
                   {% csrf_token %}
-                    <h1>Customer Login</h1>
+                    <h1>Khách hàng đăng nhập</h1>
                     
-                               {% render_field form.username class="form-control" placeholder="Username" autocomplete="off" %}
-                               {% render_field form.password class="form-control" placeholder="Password" %}
-                     <input type="submit" name="" value="Login" >
+                               {% render_field form.username class="form-control" placeholder="Tên đăng nhập" autocomplete="off" %}
+                               {% render_field form.password class="form-control" placeholder="Mật khẩu" %}
+                     <input type="submit" name="" value="Đăng nhập" >
 
                 </form>
             </div>
