--- a/ecom/templates/ecom/download_invoice.html
+++ b/ecom/templates/ecom/download_invoice.html
@@ -122,7 +122,7 @@
           <table class="table table-bordered table-striped">
             <tr>
               <td class="title">
-                <h5>Medicine Company</h5>
+                <h5>Công ty TNHH Thuốc Medicine</h5>
               </td>
 
               <td>
@@ -141,15 +141,15 @@
           <table>
             <tr>
               <td>
-                Customer : <br>{{customerName}}<br><br>
-                Customer Email :<br> {{customerEmail}}
+                Khách hàng : <br>{{customerName}}<br><br>
+                Email :<br> {{customerEmail}}
 
               </td>
 
               <td>
-                Contact Number :<br>
+                Số điện thoại liên hệ :<br>
                 {{customerMobile}}<br><br>
-                  Shipment Address :<br> {{shipmentAddress}}
+                  Địa chỉ giao hàng :<br> {{shipmentAddress}}
 
               </td>
             </tr>
@@ -163,14 +163,14 @@
           <table>
             <tr>
               <td>
-                Product Image :<br>
+                Hình sản phẩm :<br>
                  <img src="{% static product_image.url %}" alt="Profile Pic" height="40px" width="40px" /><br><br>
-                Product Price : <br>
+                Tổng thu : <br>
                 {{productPrice}}.000 VND
               </td>
               <td>
-                Product: <br> {{productName}}<br><br>
-                Description: <br> {{productDescription}}
+                Sản phẩm: <br> {{productName}}<br><br>
+                Mô tả: <br> {{productDescription}}
               </td>
 
             </tr>
@@ -185,7 +185,7 @@
           <table>
             <tr>
               <td>
-                Order Status :<br><br>
+                Trạng thái đặt hàng :<br><br>
                   {{orderStatus}}
               </td>
             </tr>
