--- a/ecom/templates/ecom/edit_profile.html
+++ b/ecom/templates/ecom/edit_profile.html
@@ -53,38 +53,38 @@
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>EDIT PROFILE</p>
+        <p>Sửa hồ sơ</p>
       </div>
       <div class="form-content">
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              {% render_field userForm.first_name class="form-control" placeholder="First Name" %}
+              {% render_field userForm.first_name class="form-control" placeholder="Tên" %}
             </div>
             <div class="form-group">
-              {% render_field userForm.username class="form-control" placeholder="Username" %}
+              {% render_field userForm.username class="form-control" placeholder="Tên đăng nhập" %}
             </div>
             <div class="form-group">
-              {% render_field customerForm.mobile class="form-control" placeholder="Mobile" %}
+              {% render_field customerForm.mobile class="form-control" placeholder="Số điện thoại" %}
             </div>
             <div class="form-group">
-              {% render_field customerForm.profile_pic class="form-control" placeholder="Profile Picture" %}
+              {% render_field customerForm.profile_pic class="form-control" placeholder="Ảnh đại diện" %}
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              {% render_field userForm.last_name class="form-control" placeholder="Last Name" %}
+              {% render_field userForm.last_name class="form-control" placeholder="Họ" %}
             </div>
             <div class="form-group">
-              {% render_field userForm.password class="form-control" placeholder="Password" %}
+              {% render_field userForm.password class="form-control" placeholder="Mật khẩu" %}
             </div>
             <div class="form-group">
-              {% render_field customerForm.address class="form-control" placeholder="Address" %}
+              {% render_field customerForm.address class="form-control" placeholder="Địa chỉ" %}
             </div>
 
           </div>
         </div>
-        <button type="submit" class="btnSubmit">Edit</button>
+        <button type="submit" class="btnSubmit">Sửa</button>
       </div>
     </div>
   </div>
