--- a/ecom/templates/ecom/payment_success.html
+++ b/ecom/templates/ecom/payment_success.html
@@ -41,12 +41,12 @@ a{
 </style>
 <div class="success-page" style="top:auto;">
    <img  src="http://share.ashiknesin.com/green-checkmark.png" class="center" alt="" />
-  <h2>Payment Successful !</h2>
-  <p>We are delighted to inform you that we received your payments.</p>
+  <h2>Thanh toán thành công !</h2>
+  <p>Chúng tôi đã nhận được thanh toán của bạn.</p>
   <br>
   <br>
-  <a style="text-decoration:none;" href="/my-order" class="btn btn-success btn-lg">View Orders/Track Orders</a>
-  <a style="text-decoration:none;" href="/customer-home">Continue Shopping</a>
+  <a style="text-decoration:none;" href="/my-order" class="btn btn-success btn-lg">Xem/theo dõi đơn hàng</a><br>
+  <a style="text-decoration:none;" href="/customer-home">Tiếp tục mua sắm</a>
 </div>
 <br><br><br><br>
 <br><br><br><br>
