--- a/ecom/templates/ecom/view_customer.html
+++ b/ecom/templates/ecom/view_customer.html
@@ -25,16 +25,16 @@
 <div class="container">
   <div class="panel panel-danger">
     <div class="panel-heading">
-      <h6 class="panel-title">Total Customers</h6>
+      <h6 class="panel-title">Danh sách khách hàng</h6>
     </div>
     <table class="table table-hover table-bordered" id="dev-table">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Picture</th>
-          <th>Contact</th>
-          <th>Address</th>
-          <th>Actions</th>
+          <th>Tên</th>
+          <th>Ảnh đại diện</th>
+          <th>Số điện thoại</th>
+          <th>Địa chỉ</th>
+          <th>Hoạt động</th>
         </tr>
       </thead>
       {% for c in customers %}
