--- a/ecom/templates/ecom/admin_invoices.html
+++ b/ecom/templates/ecom/admin_invoices.html
@@ -34,9 +34,25 @@
 	box-shadow: 5px 5px 5px #505050;
 }
 
-.my-float{
-	margin-top:22px;
-}
+    .my-float{
+        margin-top:22px;
+    }
+
+    .scan-image-btn {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        position:fixed;
+        height:70px;
+        bottom:170px;
+        right:60px;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
   </style>
 </head>
 
@@ -61,10 +77,11 @@
   {% if p %}
 
       <tr>
-        <td> {{p.name}}</td>
-        <td> <img src="{% static p.product_image.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
-        <td>{{p.price}}</td>
-        <td>{{p.description}}</td>
+        <td> {{p.id}}</td>
+        <td> {{p.code_bill}}</td>
+        <td>{{p.date_invoice}}</td>
+        <td>{{p.total}}</td>
+        <td>{{p.distributor.name}}</td>
         <td><a class="btn btn-primary btn-xs" href="{% url 'update-product' p.id  %}"><span class="glyphicon glyphicon-edit"></span></a>
           <a class="btn btn-danger btn-xs" href="{% url 'delete-product' p.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
 
@@ -81,4 +98,5 @@
 <a href="/admin-add-invoice" class="float">
 <i class="fa fa-plus my-float"></i>
 </a>
+<a href="{% url 'scan_image' %}" class="btn btn-primary scan-image-btn">Scan Image</a>
 {% endblock content %}
