--- a/ecom/templates/ecom/admin_add_invoices.html
+++ b/ecom/templates/ecom/admin_add_invoices.html
@@ -60,12 +60,12 @@
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <label for="">Code bill</label>
-              {% render_field invoiceForm.code_bill class="form-control" placeholder="Code bill" %}
+              <label for="">Số hóa đơn</label>
+              {% render_field invoiceForm.code_bill class="form-control" placeholder="Số hóa đo" %}
             </div>
             <div class="form-group">
-              <label for="">Date invoice</label>
-              {% render_field invoiceForm.date_invoice class="form-control" placeholder="Date invoice" %}
+              <label for="">Ngày nhập</label>
+              {% render_field invoiceForm.date_invoice class="form-control" placeholder="Ngày nhập" %}
             </div>
 {#            <div class="form-group">#}
 {#              <label for="">Distributor</label>#}
@@ -74,20 +74,20 @@
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label for="">Total Money</label>
-              {% render_field invoiceForm.total_money class="form-control" placeholder="Total Money" %}
+              <label for="">Tổng tiền</label>
+              {% render_field invoiceForm.total_money class="form-control" placeholder="Tổng tiền" %}
             </div>
             <div class="form-group">
-              <label for="">Tax</label>
-              {% render_field invoiceForm.total_tax class="form-control" placeholder="Tax" %}
+              <label for="">Tổng tiền thuế</label>
+              {% render_field invoiceForm.total_tax class="form-control" placeholder="Tổng tiền thuế" %}
             </div>
             <div class="form-group">
-              <label for="">Total Price</label>
-              {% render_field invoiceForm.total class="form-control" placeholder="Total Price" %}
+              <label for="">Thành tiền</label>
+              {% render_field invoiceForm.total class="form-control" placeholder="Thành tiền" %}
             </div>
           </div>
         </div>
-        <button type="submit" class="btnSubmit">ADD</button>
+        <button type="submit" class="btnSubmit">Thêm</button>
       </div>
     </div>
   </div>
