--- a/ecom/templates/ecom/my_order.html
+++ b/ecom/templates/ecom/my_order.html
@@ -186,7 +186,7 @@ p {
                     <div class="col"> <strong>Nơi giao:</strong> <br> {{order.address}}</div>
                 </li>
                 <li class="col-md-4">
-                    <div class="col"> <strong>Trạng thái:</strong> <br>
+                    <div class="col"> <strong>Trạng thái:</strong>
                     
                         {% if order.status == 'Pending'%}
                         <td> <span class="label label-info" style="font-size: 12px; border-radius: 30px;">{{order.status}}</span></td>
